All issues resolved

--- a/public/css/inside.css
+++ b/public/css/inside.css
@@ -1,9 +1,9 @@
 .logout
 {
 	background-color: rgba(0,0,0,0);
-	margin-top: 1.65%;
+	margin-top: 1.7%;
 	color: #eee;
-	border: 1px solid white;
+	border: 1px solid #fff;
 	font-weight: bold;
 	transition:all 0.3s ease;
 	letter-spacing: 0px;
@@ -11,7 +11,7 @@
 
 .logout:hover
 {
-	background-color: white;
+	background-color: #fff;
 }
 
 .generate_buttons
