--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -84,6 +84,7 @@
 
 body{
 	overflow:hidden;
+	font-family: 'Economica', sans-serif;
 }
 
 .input
@@ -92,7 +93,38 @@ body{
 }
 
 
-.btnAlignment
+/*mainpage*/
+.btnFix:hover
 {
-	float: left;	s
+	color: #fff !important;
+}
+
+.home
+{
+	padding: 20px 0 0 20px;
+
+}
+
+.printContainer
+{
+	/*padding: 0px 0px;*/
+	margin-top: -50px;
+	float: right;
+}
+
+.flip-clock-wrapper a:hover
+{
+	color: #323232 !important;
+	text-decoration: none;
+}
+
+a
+{
+	color: #fff !important;
+
+}
+
+li>a 
+{
+	color: #353535 !important;
 }
