adds new functionalities

--- a/public/css/mainpage.css
+++ b/public/css/mainpage.css
@@ -110,6 +110,7 @@ body{
 	/*padding: 0px 0px;*/
 	margin-top: -50px;
 	float: right;
+	color: #000 !important;
 }
 
 .flip-clock-wrapper a:hover
@@ -127,4 +128,9 @@ a
 li>a 
 {
 	color: #353535 !important;
+}
+
+a>.printContainer
+{
+	color: #000000 !important;
 }
